--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:title" content="Taskrypt App" />
     <meta property="og:description" content="Taskrypt helps you manage and organize your tasks efficiently." />
     <meta property="og:image" content="/favicon.png" />
-    <meta property="og:url" content="https://www.taskrypt.com" />
+    <meta property="og:url" content="https://www.taskrypt.netlify.app" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card Tags -->
